# Cyber-Cultivator-Bio-Synthesis

./: .agent.md  .agent_prompts.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  README_EN.md  build.gradle  gradle.properties  plan.md  pyproject.toml  settings.gradle
.claude/agents/: .agent_value.md  cc-brainstorm.md  cc-dev.md  cc-orchestrator.md  cc-tester-core.md  cc-tester-infra.md  cc-tester-ui.md
.github/gradle/: exclude-jei-runtime.init.gradle  exclude-non-kubejs-runtime.init.gradle
.github/workflows/: ci.yml
.impeccable/: design.json
docs/: USER_GUIDE.md  dev-plan.md  lessons-learned.md  texture_generation_spec.md
docs/test-reports/: 2026-07-16-repository-audit.md  2026-07-17-confirmed-issues-fixes.md  2026-07-17-v1.1.4-release.md  2026-07-17-v1.1.6-kubejs-compat.md  2026-07-18-v1.1.6-curios-audit.md  2026-07-18-v1.1.6-machine-gui.md  2026-07-19-v1.1.6-core-textures.md  2026-07-19-v1.1.6-creative-tab.md  2026-07-19-v1.1.6-crop-textures.md  2026-07-19-v1.1.6-machine-texture-details.md  2026-07-19-v1.1.6-storage-blocks.md  2026-07-19-v1.1.6-workspace-audit.md  2026-07-20-v1.1.7-industrial-phase-gate.md  2026-07-22-world-01-deepslate-ores.md  (+25 more)
logs/: orchestrator-log.md
mcp-bridge-server/: pyproject.toml
mcp-bridge-server/src/mcp_bridge_server/: __init__.py  server.py  tcp_client.py
mcp-bridge-server/tests/: test_tools.py
scripts/: generate_core_item_textures.mjs  generate_machine_gui_textures.mjs
simulations/: advanced_seed_model.md  advanced_seed_sim.py  level10_probability_sim.py
tests/: test_protocol.py
(+246 files in other folders)
